--- a/index.html
+++ b/index.html
@@ -15,10 +15,20 @@
             <a href="#">Link</a>
             <a href="#">Link</a>
             <a href="#">Link</a>
-            <a href="#">Link</a>
+            <a id="link-cube" href="#">Link</a>
         </nav>
 
         <section class="intro">
+            <h1>headline goes here</h1>
+            <p>even wat leuke tekst! later even aanpassen!<br>
+            hgfaehhfdjksjfjkdfsjfbnfjksbeuhfbsjdbfjbsjbdnfewjbfjsjeihfbjsbvjbdvvbjvbwibefi<br>
+            jhbfhbjvbejvbjskbjvdbjkbsdjkbvjkebvjks bdn bvjnejkfnejbsjbfbsjkbeflkjbsjbefjkebf</p>
+
+            <div>
+                <a href="#">Link</a>
+                <a href="#">Link</a>
+            </div>
+            
         </section>
     </header>
 
