intro alignment is af

--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
         </nav>
 
         <section class="intro">
-            <h1>headline goes here</h1>
-            <p>even wat leuke tekst! later even aanpassen!<br>
-            hgfaehhfdjksjfjkdfsjfbnfjksbeuhfbsjdbfjbsjbdnfewjbfjsjeihfbjsbvjbdvvbjvbwibefi<br>
-            jhbfhbjvbejvbjskbjvdbjkbsdjkbvjkebvjks bdn bvjnejkfnejbsjbfbsjkbeflkjbsjbefjkebf</p>
+            <h1 id="intro-title" >Alana's boekenblog</h1>
+            <p id="intro-text" >Hallo! Met dit blog deel ik de boeken die ik heb gelezen en mijn recensies ervoor.
+                Zo kan jij bepalen of deze boeken misschien ook wat voor jou zijn. Ik zal het vooral hebben over fantasy boeken, want dat is mijn favoriete genre.
+                Als mijn blog je heeft geholpen met het vinden van een nieuw boek, of heb je eventueel zelf een leuk boek om aan te raden?
+                Laat dat dan vooral weten door het formulier in te vullen!</p>
 
             <div>
-                <a href="#">Link</a>
-                <a href="#">Link</a>
+                <a id="intro-link" href="#">Link</a>
+                <a id="intro-link" href="#">Link</a>
             </div>
             
         </section>
