extra html en css pagina's

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/boeken.css">
+    <link rel="stylesheet" href="./css/formulier.css">
     <title>Hoofdpagina</title>
 </head>
 
@@ -11,11 +13,11 @@
 
     <header>
         <nav>
+            <a href="/index.html">Home</a>
+            <a href="/books.html">Books</a>
+            <a href="/form.html">Form</a>
             <a href="#">Link</a>
             <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a id="link-cube" href="#">Link</a>
         </nav>
 
         <section class="intro">
