footer sticks to bottom

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     </main>
 
     <footer>
-        <section class="footer-text">
+        <section>
+
+        </section>
+
+        <section class="footer-links">
             <a id="foot-a" href="#">Privacyverklaring</a>
             <a id="foot-a" href="#">Algemene voorwaarden</a>
             <a id="foot-a" href="#">Cookiebeleid</a>
