--- a/books.html
+++ b/books.html
@@ -13,17 +13,30 @@
 
     <header>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/books.html">Books</a>
-            <a href="/form.html">Form</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+            <a id="nav-a" href="/index.html">Home</a>
+            <a id="nav-a" href="/books.html">Books</a>
+            <a id="nav-a" href="/form.html">Form</a>
+            <a id="nav-a" href="#">Link</a>
+            <a id="nav-a" href="#">Link</a>
         </nav>
     </header>
 
     <main>
         
     </main>
+
+    <footer>
+        <section>
+
+        </section>
+
+        <section class="footer-links">
+            <a id="foot-a" href="#">Privacyverklaring</a>
+            <a id="foot-a" href="#">Algemene voorwaarden</a>
+            <a id="foot-a" href="#">Cookiebeleid</a>
+            <a id="foot-a" href="#">Contact</a>
+        </section>
+    </footer>
     
 </body>
 </html>
