book page images

--- a/books.html
+++ b/books.html
@@ -22,7 +22,19 @@
     </header>
 
     <main>
-        
+        <h1>Bookreviews</h1>
+        <div id="percy-jackson">
+            <img src="./images/percy-jackson.jpg">
+            <h3>Percy Jackson: Chalice of the Gods</h3>
+        </div>
+        <div id="good-omens">
+            <img src="./images/good-omens.jpg">
+            <h3>Good Omens</h3>
+        </div>
+        <div id="legends-lattes">
+            <img src="./images/legends-and-lattes.jpg">
+            <h3>Legends & Lattes</h3>
+        </div>
     </main>
 
     <footer>
