--- a/form.html
+++ b/form.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/boeken.css">
-    <link rel="stylesheet" href="./css/formulier.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/books.css">
+    <link rel="stylesheet" href="./css/form.css">
     <title>Hoofdpagina</title>
 </head>
 
 <body>
-
     <header>
+        <img id="logo" src="./images/logo.png">
+        
         <nav>
             <a id="nav-a" href="/index.html">Home</a>
             <a id="nav-a" href="/books.html">Books</a>
             <a id="nav-a" href="/form.html">Form</a>
-            <a id="nav-a" href="#">Link</a>
-            <a id="nav-a" href="#">Link</a>
         </nav>
     </header>
 
