--- a/index.html
+++ b/index.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/boeken.css">
-    <link rel="stylesheet" href="./css/formulier.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/books.css">
+    <link rel="stylesheet" href="./css/form.css">
     <title>Hoofdpagina</title>
 </head>
 
 <body>
 
     <header>
+        <img id="logo" src="./images/logo.png">
+        
         <nav>
             <a id="nav-a" href="/index.html">Home</a>
             <a id="nav-a" href="/books.html">Books</a>
             <a id="nav-a" href="/form.html">Form</a>
-            <a id="nav-a" href="#">Link</a>
-            <a id="nav-a" href="#">Link</a>
         </nav>
     </header>
 
     <main class="intro">
-        <h1 id="intro-title" >Alana's boekenblog</h1>
-        <p id="intro-text" >Hallo! Met dit blog deel ik de boeken die ik heb gelezen en mijn recensies ervoor.
-            Zo kan jij bepalen of deze boeken misschien ook wat voor jou zijn. Ik zal het vooral hebben over fantasy boeken, want dat is mijn favoriete genre.                Als mijn blog je heeft geholpen met het vinden van een nieuw boek, of heb je eventueel zelf een leuk boek om aan te raden?
-            Laat dat dan vooral weten door het formulier in te vullen!</p>
         
-        <div>
-            <a id="intro-link" href="/books.html">Books</a>
-            <a id="intro-link" href="/form.html">Form</a>
-        </div>
+        <img src="./images/bookshelf.jpg" class="background">
+
+        <section class="intro-content">
+            <h1 id="intro-title" >Alana's Bookblog</h1>
+            <p id="intro-text">Hello! With this blog I can share the books I've read and my reviews. Maybe you'll find some books you'd like to read.
+                I'll mostly be talking about fantasy books, because that is my favorite genre. If my blog has helped you find a book, or you just want to
+                let me know your opinion of a book, please let me know by filling in the form!</p>
+            <div>
+                <a id="intro-link" href="/books.html">Books</a>
+                <a id="intro-link" href="/form.html">Form</a>
+            </div>
+        </section>
     </main>
 
     <footer>
