--- a/books.html
+++ b/books.html
@@ -51,11 +51,18 @@
     </main>
 
     <footer>
-        <section>
-
+        <section class="footer-box">
+            <div>
+                <p id="foot-text">Copyright 2023 Alana le Feber</p>
+            </div>
+            <div>
+                <img class="foot-img" src="./images/instagram.png">
+                <img class="foot-img" src="./images/facebook.png">
+                <img class="foot-img" src="./images/snapchat.png">
+            </div>
         </section>
 
-        <section class="footer-links">
+        <section class="footer-box">
             <a id="foot-a" href="#">Privacyverklaring</a>
             <a id="foot-a" href="#">Algemene voorwaarden</a>
             <a id="foot-a" href="#">Cookiebeleid</a>
