--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main class="intro">
-        
+
         <img src="./images/bookshelf.jpg" class="background">
 
         <section class="intro-content">
@@ -39,11 +39,18 @@
     </main>
 
     <footer>
-        <section>
-
+        <section class="footer-box">
+            <div>
+                <p id="foot-text">Copyright 2023 Alana le Feber</p>
+            </div>
+            <div>
+                <img class="foot-img" src="./images/instagram.png">
+                <img class="foot-img" src="./images/facebook.png">
+                <img class="foot-img" src="./images/snapchat.png">
+            </div>
         </section>
 
-        <section class="footer-links">
+        <section class="footer-box">
             <a id="foot-a" href="#">Privacyverklaring</a>
             <a id="foot-a" href="#">Algemene voorwaarden</a>
             <a id="foot-a" href="#">Cookiebeleid</a>
