footer en nav nu helemaal af

--- a/form.html
+++ b/form.html
@@ -12,12 +12,12 @@
 
 <body>
     <header>
-        <img id="logo" src="./images/logo.png">
+        <img id="nav-logo" src="./images/logo-black.png">
         
         <nav>
-            <a id="nav-a" href="/index.html">Home</a>
-            <a id="nav-a" href="/books.html">Books</a>
-            <a id="nav-a" href="/form.html">Form</a>
+            <a class="nav-a" href="/index.html">Home</a>
+            <a class="nav-a" href="/books.html">Books</a>
+            <a class="nav-a" href="/form.html">Form</a>
         </nav>
     </header>
 
@@ -27,6 +27,9 @@
 
     <footer>
         <section class="footer-box">
+            <div>
+                <img id="foot-logo" src="./images/logo-white.PNG">
+            </div>
             <div>
                 <p id="foot-text">Copyright 2023 Alana le Feber</p>
             </div>
@@ -38,10 +41,10 @@
         </section>
 
         <section class="footer-box">
-            <a id="foot-a" href="#">Privacyverklaring</a>
-            <a id="foot-a" href="#">Algemene voorwaarden</a>
-            <a id="foot-a" href="#">Cookiebeleid</a>
-            <a id="foot-a" href="#">Contact</a>
+            <a class="foot-a" href="#">Privacyverklaring</a>
+            <a class="foot-a" href="#">Algemene voorwaarden</a>
+            <a class="foot-a" href="#">Cookiebeleid</a>
+            <a class="foot-a" href="#">Contact</a>
         </section>
     </footer>
     
