--- a/books.html
+++ b/books.html
@@ -26,25 +26,40 @@
         <h1 class="review-head">Book Reviews</h1>
 
         <section class="book-reviews">
-            <div id="book-box">
-                <img src="./images/percy-jackson.jpg" id="book-img">
+            <div class="book-box">
+                <div class="book-img-box">
+                    <img src="./images/percy-jackson.jpg" class="book-img">
+                </div>
+                
                 <h3 id="book-title">Percy Jackson: Chalice of the Gods</h3>
+                <img src="./images/five-star.PNG" class="star-img">
                 <p id="book-text">This book is exactly what you'd expect from a Percy Jackson book! It was a very nostalgic read and I loved every second of it.
                     It was funny, exciting and the romance was adorable.</P>
+                <button class="book-button">Link</button>
             </div>
 
-            <div id="book-box">
-                <img src="./images/good-omens.jpg" id="book-img">
+            <div class="book-box">
+                <div class="book-img-box">
+                    <img src="./images/good-omens.jpg" class="book-img">
+                </div>
+
                 <h3 id="book-title">Good Omens</h3>
+                <img src="./images/three-star.PNG" class="star-img">
                 <p id="book-text">This book is such a fun read! The character are lovable, especially Crowley and Aziraphale. I love how it has a new take on
                     Christianity and how a demon and angels are friends and love eachother.</p>
+                <button class="book-button">Link</button>
             </div>
 
-            <div id="book-box">
-                <img src="./images/legends-and-lattes.jpg" id="book-img">
+            <div class="book-box">
+                <div class="book-img-box">
+                    <img src="./images/legends-and-lattes.jpg" class="book-img">
+                </div>
+
                 <h3 id="book-title">Legends & Lattes</h3>
+                <img src="./images/four-star.PNG" class="star-img">
                 <p id="book-text">This was a very cozy and cute read! It's a very chill book about Viv starting a new life for herself and overcoming challenges.
                     With a cute and subtle romance thrown in the mix.</p>
+                <button class="book-button">Link</button>
             </div>
         </section>
 
