colors changed and book page finished

--- a/books.html
+++ b/books.html
@@ -28,7 +28,10 @@
         <section class="book-reviews">
             <div class="book-box">
                 <div class="book-img-box">
-                    <img src="./images/percy-jackson.jpg" class="book-img">
+                    <img src="./images/bookshelf.jpg" class="book-background">
+                    <div>
+                        <img src="./images/percy-jackson.jpg" class="book-img">
+                    </div>
                 </div>
                 
                 <h3 id="book-title">Percy Jackson: Chalice of the Gods</h3>
@@ -40,7 +43,10 @@
 
             <div class="book-box">
                 <div class="book-img-box">
-                    <img src="./images/good-omens.jpg" class="book-img">
+                    <img src="./images/bookshelf.jpg" class="book-background">
+                    <div>
+                        <img src="./images/good-omens.jpg" class="book-img">
+                    </div>
                 </div>
 
                 <h3 id="book-title">Good Omens</h3>
@@ -52,7 +58,10 @@
 
             <div class="book-box">
                 <div class="book-img-box">
-                    <img src="./images/legends-and-lattes.jpg" class="book-img">
+                    <img src="./images/bookshelf.jpg" class="book-background">
+                    <div>
+                        <img src="./images/legends-and-lattes.jpg" class="book-img">
+                    </div>
                 </div>
 
                 <h3 id="book-title">Legends & Lattes</h3>
