--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main class="intro">
 
-        <img src="./images/bookshelf.jpg" class="background">
+        <img src="./images/bookshelf.jpg" id="home-background">
 
         <section class="intro-content">
             <h1 id="intro-title" >Alana's Bookblog</h1>
