form accept page

--- a/books.html
+++ b/books.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/books.css">
-    <link rel="stylesheet" href="./css/form.css">
     <title>Hoofdpagina</title>
 </head>
 
@@ -23,9 +21,9 @@
     </header>
 
     <main>
-        <h1 class="review-head">Book Reviews</h1>
+        <h1>Book Reviews</h1>
 
-        <section class="book-reviews">
+        <section id="book-reviews">
             <div class="book-box">
                 <div class="book-img-box">
                     <img src="./images/bookshelf.jpg" class="book-background">
@@ -34,11 +32,11 @@
                     </div>
                 </div>
                 
-                <h3 id="book-title">Percy Jackson: Chalice of the Gods</h3>
+                <h3>Percy Jackson: Chalice of the Gods</h3>
                 <img src="./images/five-star.PNG" class="star-img">
-                <p id="book-text">This book is exactly what you'd expect from a Percy Jackson book! It was a very nostalgic read and I loved every second of it.
+                <p class="book-text">This book is exactly what you'd expect from a Percy Jackson book! It was a very nostalgic read and I loved every second of it.
                     It was funny, exciting and the romance was adorable.</P>
-                <button class="book-button">Link</button>
+                <button>More</button>
             </div>
 
             <div class="book-box">
@@ -49,11 +47,11 @@
                     </div>
                 </div>
 
-                <h3 id="book-title">Good Omens</h3>
+                <h3>Good Omens</h3>
                 <img src="./images/three-star.PNG" class="star-img">
-                <p id="book-text">This book is such a fun read! The character are lovable, especially Crowley and Aziraphale. I love how it has a new take on
+                <p class="book-text">This book is such a fun read! The character are lovable, especially Crowley and Aziraphale. I love how it has a new take on
                     Christianity and how a demon and angels are friends and love eachother.</p>
-                <button class="book-button">Link</button>
+                <button>More</button>
             </div>
 
             <div class="book-box">
@@ -64,11 +62,11 @@
                     </div>
                 </div>
 
-                <h3 id="book-title">Legends & Lattes</h3>
+                <h3>Legends & Lattes</h3>
                 <img src="./images/four-star.PNG" class="star-img">
-                <p id="book-text">This was a very cozy and cute read! It's a very chill book about Viv starting a new life for herself and overcoming challenges.
+                <p class="book-text">This was a very cozy and cute read! It's a very chill book about Viv starting a new life for herself and overcoming challenges.
                     With a cute and subtle romance thrown in the mix.</p>
-                <button class="book-button">Link</button>
+                <button>More</button>
             </div>
         </section>
 
