--- a/form-accept.html
+++ b/form-accept.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/form-accept.css">
     <title>Hoofdpagina</title>
 </head>
 
@@ -24,14 +24,7 @@
         <img src="./images/bookshelf.jpg" id="home-background">
 
         <section id="intro-content">
-            <h1>Alana's Bookblog</h1>
-            <p id="intro-text">Hello! With this blog I can share the books I've read and my reviews. Maybe you'll find some books you'd like to read.
-                I'll mostly be talking about fantasy books, because that is my favorite genre. If my blog has helped you find a book, or you just want to
-                let me know your opinion of a book, please let me know by filling in the form!</p>
-            <div>
-                <a class="intro-link" href="/books.html">Books</a>
-                <a class="intro-link" href="/form.html">Form</a>
-            </div>
+            <h1>Thank you for submitting your form!</h1>
         </section>
     </main>
 
