--- a/form.html
+++ b/form.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/books.css">
     <link rel="stylesheet" href="./css/form.css">
     <title>Hoofdpagina</title>
 </head>
@@ -22,9 +20,9 @@
     </header>
 
     <main>
-        <h1 id="form-title">Form</h1>
+        <h1>Form</h1>
 
-        <form action="https://docent.cmi.hr.nl/moora/frontend/send-mail.php" method="POST">
+        <form action="form-accept.html">
 
             <div class="input-horizontal">
                 <div class="input-vertical">
