mobile size responsive

--- a/form-accept.html
+++ b/form-accept.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/form-accept.css">
-    <title>Hoofdpagina</title>
+    <link rel="stylesheet" href="./css/home.css">
+    <title>Form Submit</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <section class="footer-box">
+        <section id="footer-left">
             <div>
                 <img id="foot-logo" src="./images/logo-white.PNG">
             </div>
@@ -43,7 +43,7 @@
             </div>
         </section>
 
-        <section class="footer-box">
+        <section id="footer-right">
             <a class="foot-a" href="#">Privacyverklaring</a>
             <a class="foot-a" href="#">Algemene voorwaarden</a>
             <a class="foot-a" href="#">Cookiebeleid</a>
