--- a/books.html
+++ b/books.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/books.css">
-    <title>Hoofdpagina</title>
+    <title>Book Reviews</title>
 </head>
 
 <body>
@@ -73,7 +73,7 @@
     </main>
 
     <footer>
-        <section class="footer-box">
+        <section id="footer-left">
             <div>
                 <img id="foot-logo" src="./images/logo-white.PNG">
             </div>
@@ -87,7 +87,7 @@
             </div>
         </section>
 
-        <section class="footer-box">
+        <section id="footer-right">
             <a class="foot-a" href="#">Privacyverklaring</a>
             <a class="foot-a" href="#">Algemene voorwaarden</a>
             <a class="foot-a" href="#">Cookiebeleid</a>
