--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        <section class="footer-box">
+        <section id="footer-left">
             <div>
                 <img id="foot-logo" src="./images/logo-white.PNG">
             </div>
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <section class="footer-box">
+        <section id="footer-right">
             <a class="foot-a" href="#">Privacyverklaring</a>
             <a class="foot-a" href="#">Algemene voorwaarden</a>
             <a class="foot-a" href="#">Cookiebeleid</a>
