--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <img id="nav-logo" src="./images/logo-black.png">
         
         <nav>
-            <a class="nav-a" href="/index.html">Home</a>
-            <a class="nav-a" href="/books.html">Books</a>
-            <a class="nav-a" href="/form.html">Form</a>
+            <a class="nav-a" href="index.html">Home</a>
+            <a class="nav-a" href="books.html">Books</a>
+            <a class="nav-a" href="form.html">Form</a>
         </nav>
     </header>
 
