--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             let me know your opinion of a book, please let me know by filling in the form!</p>
         
             <div>
-            <a class="intro-link" href="/books.html">Books</a>
-            <a class="intro-link" href="/form.html">Form</a>
+            <a class="intro-link" href="books.html">Books</a>
+            <a class="intro-link" href="form.html">Form</a>
         </div>
     </main>
 
