--- a/books.html
+++ b/books.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <img id="nav-logo" src="./images/logo-black.png">
+        <img id="nav-logo" src="../images/logo-black.png">
         
         <nav>
             <a class="nav-a" href="index.html">Home</a>
